Header & Footer: Fixed flex alignment issues

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -191,6 +191,9 @@
   .mr-auto {
     margin-right: auto;
   }
+  .mb-3 {
+    margin-bottom: calc(var(--spacing) * 3);
+  }
   .ml-3 {
     margin-left: calc(var(--spacing) * 3);
   }
@@ -351,8 +354,14 @@
   .p-0 {
     padding: calc(var(--spacing) * 0);
   }
+  .p-1 {
+    padding: calc(var(--spacing) * 1);
+  }
   .p-2 {
     padding: calc(var(--spacing) * 2);
+  }
+  .p-3 {
+    padding: calc(var(--spacing) * 3);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
